--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,5 +1,5 @@
 body {
-    background-color: #181818
+    background-color: #e23636
 }
 
 li {
@@ -20,6 +20,8 @@ ul {
 .hero {
     margin: 5px;
     cursor: pointer;
+    background-color: black;
+    border-radius: 5px;
 }
 
 .hero__image {
@@ -28,6 +30,7 @@ ul {
     display: flex;
     align-items: flex-end;
     justify-content: center;
+    border-radius: 5px;
 }
 
 .hero:hover .hero__image {
@@ -36,12 +39,13 @@ ul {
 
 .hero__name {
     z-index: 1;
-    font-weight: bold;
     color: white;
     left: 0;
     bottom: 0;
-    background-color: rgb(14, 14, 14);
-    width: 100%
+    background-color: #181818;
+    padding: 5px;
+    width: 100%;
+    font-family: 'Bebas Neue';
 }
 
 .error_message {
