--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -3,6 +3,7 @@
     cursor: pointer;
     background-color: black;
     border-radius: 5px;
+    position: relative;
 }
 
 .hero__image {
@@ -27,4 +28,11 @@
     padding: 5px;
     width: 100%;
     font-family: 'Bebas Neue';
+}
+
+.hero__clickable {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: 999
 }
